# Araceae

./: .flake8  .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
araceae/: __init__.py  calculus.py  console.py  ec_import.py  misc.py  result.py  signal.py  vcwrapper.py  vector.py
araceae/testing/: time.py
araceae/tests/: test_signal.py  test_timer.py  test_vector.py
araceae/types/: __init__.py  iota.py  refchain.py  result.py  vector.py
tests/: test_result.py  test_signal.py  test_timer.py  test_vcwrapper.py  test_vector.py
