[metadata]
name = araceae
version = 0.1.6
author = Martin Olivesten
author_email = marol450@student.liu.se
url = https://github.com/ImFstAsFckBoi/araceae
description = a collection of random stuff
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude = tests




[options.extras_require]
dev =
    pytest
